--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,17 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 server.port=8020
 spring.main.allow-circular-references=true
+spring.jpa.database-platform=org.hibernate.dialect.MySQL5Dialect
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=pfetest2020@gmail.com
+spring.mail.password=enicarthage
+mail.from.email=<pfetest2020@gmail.com>
 
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.connectiontimeout=5000
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.writetimeout=5000
+
+spring.mail.properties.mail.smtp.starttls.enable=true
